<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#03DAC5"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="107dp"
        android:layout_height="200sp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher1" />

    <customfonts.MyTextView_Roboto_Regular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/iai_attendance"
        android:textColor="@android:color/white"
        android:textSize="30sp" />



    <customfonts.TextViewSFProDisplayRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_iai_cam"
        android:textColor="#37474F"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp" />

</RelativeLayout>