<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >


        <EditText
            android:id="@+id/name_student_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="16dp"
            android:hint="@string/student_name"/>
        <EditText
            android:id="@+id/regNo_student_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/reg_number"/>
        <EditText
            android:id="@+id/mobileNo_student_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:hint="@string/phone_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel_btn_popup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:foreground="?attr/selectableItemBackground"
                    android:textColor="@color/theme_light"
                    android:background="@color/white"
                    android:layout_marginEnd="3dp"
                    android:gravity="center"
                    tools:ignore="UnusedAttribute" />
                <TextView
                    android:id="@+id/add_btn_popup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="Ajouter"
                    android:textSize="16sp"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginStart="3dp"
                    android:background="@color/white"
                    android:textColor="@color/theme_light"
                    android:gravity="center"
                    tools:targetApi="m"
                    tools:ignore="UnusedAttribute" />


        </LinearLayout>


</LinearLayout>